# Robot_Arm_Inverse_Kinematic_Vis

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: main.tex  video_text_M.md  video_text_N.md  video_text_R.md
docs/First_Interim_Report/: main.tex
docs/Secong_Interim_Report/: main.tex
examples/: example_basic.py
src/robot_arm/: __init__.py
src/robot_arm/core/: __init__.py  transforms.py  vectors.py
src/robot_arm/kinematics/: __init__.py  forward.py  inverse.py
src/robot_arm/rendering/: __init__.py  camera.py  projection.py
src/robot_arm/visualization/: __init__.py  app.py
tests/: test_core.py  test_kinematics.py  test_rendering.py
